baby steps to html5

--- a/pydoc_fork/templates/heading.jinja2
+++ b/pydoc_fork/templates/heading.jinja2
@@ -1,8 +1,25 @@
-<table width="100%" cellspacing=0 cellpadding=2 border=0 summary="heading">
-    <tr bgcolor="{bgcol}">
-        <td valign=bottom>&nbsp;<br>
-            <font color="{fgcol}" face="helvetica, arial">&nbsp;<br>{{title}}</font></td>
-        <td align=right valign=bottom
-        ><font color="{fgcol}" face="helvetica, arial">{% if extras %}{{ extras }}{% else %}'&nbsp;'{% endif %}</font></td>
+<table class="heading">
+    <tr style="background-color: {{ bgcol }};">
+        <td class="title" style="vertical-align: bottom">&nbsp;<br>
+            <span style="color: {{ fgcol }}; font-family: helvetica, arial,sans-serif;">
+            &nbsp;<br>{{ title }}
+            </span>
+        </td>
+        <td style="vertical-align: bottom; text-align: right;">
+            <span style="color: {{ fgcol }}; font-family: helvetica, arial,sans-serif;">
+                {% if extras %}{{ extras }}{% else %}'&nbsp;'{% endif %}
+            </span>
+        </td>
     </tr>
 </table>
+{##}
+{#<table width="100%" cellspacing=0 cellpadding=2 border=0 summary="heading">#}
+{#    <tr bgcolor="{bgcol}">#}
+{#        <td valign=bottom>&nbsp;<br>#}
+{#            <font color="{fgcol}" face="helvetica, arial">&nbsp;<br>{{title}}</font>#}
+{#        </td>#}
+{#        <td align=right valign=bottom>#}
+{#            <font color="{fgcol}" face="helvetica, arial">{% if extras %}{{ extras }}{% else %}'&nbsp;'{% endif %}</font>#}
+{#        </td>#}
+{#    </tr>#}
+{#</table>#}
