--- a/pydoc_fork/templates/page.jinja2
+++ b/pydoc_fork/templates/page.jinja2
@@ -2,6 +2,7 @@
 <html>
 <head><title>Python: {{title}}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body bgcolor="#f0f0f8">
 {{contents}}
