--- a/pydoc_fork/templates/style.css
+++ b/pydoc_fork/templates/style.css
@@ -1,6 +1,6 @@
 table.heading {
     width: 100%;
-    border-spacing: 0px;
+    border-spacing: 0;
     border-collapse: collapse;
     border: 0;
     /*summary="heading"*/
