--- a/pydoc_fork/templates/page.jinja2
+++ b/pydoc_fork/templates/page.jinja2
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<html>
+<html lang="en">
 <head><title>Python: {{title}}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="style.css">
